# cmake-luafs-win64

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  dumpbin64.bat  luafilesystem-dev-1.rockspec  make64.bat
cmake-dump-release-x64/: lfs.dll.dependents.txt  lfs.dll.exports.txt  lfs.dll.headers.txt  lfs.dll.imports.txt  lfs.dll.ldd.txt  normalize.py
